Fix horizontal layout scroll/right side white space by restricting overflow-x

--- a/css/layout.css
+++ b/css/layout.css
@@ -91,6 +91,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .page-wrapper > main {
